# projectguard

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  projects.db  tauri.conf.json
src-tauri/data/: projects.json
src-tauri/src/: main.rs
src-tauri/src/monitor/: mod.rs
src-tauri/src/projects/: mod.rs
src/pages/: Home.tsx
src/pages/projects/: Terminal.tsx  add.tsx  list.tsx
