[package]
name = "projectguard"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "projectguard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
tauri = { version = "2", features = [] }  # Removed dialog-all feature
tauri-plugin-dialog = "2" # Dialog plugin provides dialog functionality
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
